Add first iteraton of derivation process

--- a/article/sections/background.tex
+++ b/article/sections/background.tex
@@ -17,6 +17,14 @@ In XXXX commercial banks realized that they could pacakge many individual mortag
 
 When components of the FRB system fail, the government, central banks, or other relevant entites step in to stop the failure before it can cascade into a catastrophich systemtic breakdown. \textcite{berger2020tarp} argues that the cost of bailouts is of a relativly low percentage compared to the potential cost of letting the crisis play out. However, since entites, such as commercial banks, know that there is a high probability they will recieve a bailout in the event of failure, they are incentivized to increase their apetite for risk to take on riskier and riskier investments for greater profit. The so called \textit{too big to fail} commerical banks are even more incentivized to increase their risk, because a failure of these banks would cause a catastropich systematic breakdown alone, and the governemnt or related entites will have no option but to bail them out.
 
+\subsection{Maturity transformation}
+Maturity transformation is a key element of our current economic system that matches short-term funding to long-term loans. Long-term loans provide people and businesses financing to perform economic development. It would be increadibly risky for people to lock up all of their funds for the duration (maturity) of the long-term loans, they might need it! Maturity transformation is the act of combining short-term funding, for example from checking accounts or saving accoutns, to long-term loans so that people can withdraw and use their money, but still finance these important long-term loans, at the cost of financial stability and the possibility of bank-runs. 
+
+One option to this problem is to enable the sale of the long-term loan so that people can withdraw and use their money. (todo expand)
+
+
+\textcite{Stellinga2021} argue that maturity transformation is an important economic function and 
+
 \subsection{Economic theory}
 Quantity Theory of Money (QTM) is an economic theory that suggests there is a direct relationship between the supply of money in an economy and the price level of goods and services. It argues that changes in the money supply will lead to proportional changes in the price level. The theory assumes that the velocity of money (the rate at which money is spent) and the level of real output are constant in the short run. \textcite{fisherQTM} defined the formula for the quantity theory of money as:
 \begin{equation}
@@ -56,7 +64,9 @@ A Collateralized Debt Obligation (CDO) can be seen as a generalization of MBS/CM
 
 Syntethic CDOs are bets or wagers put on the performance of a CDO, essentially leveraging the CDO multiple times for greater profit or greater loss. Synthetic CDOs on CDOs of MBSs, underneath it all backed by \textit{"dogshit"} mortages, was one of the major cause of the great recession of 2008, and these synthetic CDOs was aptly named, again by the big short movie, \textit{"dogshit wrapped in catshit"}. 
 
-MBS, CMO, and CDOs, are in the authors opinion, a generally good idea to pool together underlying assets or debts to diversify risk into simple instruments, however it is clear that this system was massivly perverted in the 2000s, leading to the great recission of 2008.
+Assed-Backed Securites (ABS) are collaterlized and backed by any kind of assets, usually debt assets that generate cash-flow at a steady rate. This security is a further generalization of CDOs. 
+
+MBS, CMO, CDO, and ABS are in the authors opinion, a generally good idea to pool together underlying assets or debts to diversify risk into simple instruments, however it is clear that this system was massivly perverted in the 2000s, especially with derivitates on top of these securites, such as synthetic CDOs that lead to the great recission of 2008.
 
 \subsection{The great recession of 2008}
 
@@ -101,6 +111,8 @@ Configuration options
 \end{itemize}
 
 In the SMS system, banks cannot create deposits out of loans out of thin air, but have to raise the money. 
+
+Kotlikoff (44, TODO add ref), argues that a new supervisory body, a Finanical Authority, should examine and rate all financial instriumts to asses risks. 
 
 \subsection{The economy of cryptocurrencies and other Decentralized Digital Assets (DDA)}
 One of the primary tenets behind cryptocurrencies, tokens, stablecoins and other variants of Decentralized Digital Assets (DDA) in general is having full control of your own money. Most DDAs are not invested or otherwise put to use and therefore align more to the 100RB and SMS system over the current FRB system, in-fact, the author (todo argue) would argue that DDAs can be described as a Self-Soverign Money (SSM) system that share most of the similarities, advantages, and disadvantages of the 100RB/SMS system. The 100RB/SMS system is designed for a single country or economy, while SSM is inherently a global system. The SSM system can therefor be seen as an extension and a complement to national 100RB/SMS systems.
