--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -103,10 +103,7 @@ publisher = {Paramount Pictures}
 }
 
 @Inbook{Stellinga2021,
-author="Stellinga, Bart
-and de Hoog, Josta
-and van Riel, Arthur
-and de Vries, Casper",
+author="Stellinga, Bart and de Hoog, Josta and van Riel, Arthur and de Vries, Casper",
 title="How Does the Sovereign Money System Work?",
 bookTitle="Money and Debt: The Public Role of Banks",
 year="2021",
@@ -117,4 +114,13 @@ abstract="This chapter addresses the broad outlines of a sovereign money system 
 isbn="978-3-030-70250-2",
 doi="10.1007/978-3-030-70250-2_5",
 url="https://doi.org/10.1007/978-3-030-70250-2_5"
+}
+
+@misc{ABSinvestopedia,
+author = {James Chen},
+title = {Asset-Backed Security (ABS): What It Is, How Different Types Work},
+howpublished = {\url{https://www.investopedia.com/terms/a/asset-backedsecurity.asp}},
+month = {2},
+year = {2023},
+note = {(Accessed on 03/20/2023)}
 }
