--- a/article/thesis.tex
+++ b/article/thesis.tex
@@ -30,5 +30,8 @@ FRB & Fractional Reserve Banking \\
 \end{tabular}
 
 \input{sections/background}
+
+\input{sections/derivation.tex}
+
 \printbibliography
 \end{document}
