--- a/article/thesis.tex
+++ b/article/thesis.tex
@@ -7,7 +7,7 @@
 \usepackage{babel,csquotes,xpatch}% recommended
 
 
-\title{Credit Asset Token (CAT) [Working title]}
+\title{Towards equivivalent economic growth in a (Self) Sovereign Money System with Collateralized Asset Tokens (CAT) [Working Paper]}
 \author{Kim Aksel Tahuil Borgen}
 \date{\today}
 \addbibresource{thesis.bib}
