--- a/article/sections/derivation.tex
+++ b/article/sections/derivation.tex
@@ -1,5 +1,5 @@
 \section{Deriving a new system}
-\textbf{DISCLAIMER: This section is Work In Progress and symbols are not set in stone and might change as I work on this section!!!}
+\textbf{DISCLAIMER: This section is Work In Progress and symbols are not set in stone and might change as I work on this section!}
 
 The investor is in this context a person or entity that decided to invest their money by lending it out, for example trough a checking account, term-locked deposit accounts, investment accounts, or equity in a investment fund, in exchange either directly or inderectly for a debt contract from the borrower.
 
