fix title grammar

--- a/article/thesis.tex
+++ b/article/thesis.tex
@@ -7,7 +7,7 @@
 \usepackage{babel,csquotes,xpatch}% recommended
 
 
-\title{Towards equivivalent economic growth in a (Self) Sovereign Money System with Collateralized Asset Tokens (CAT) compared to our current Fractional Reserve Banking system [Working Paper]}
+\title{Towards equivalent economic growth in a (Self) Sovereign Money System with Collateralized Asset Tokens (CAT) compared to our current Fractional Reserve Banking system [Working Paper]}
 \author{Kim Aksel Tahuil Borgen}
 \date{\today}
 \addbibresource{thesis.bib}
