add abstract, add section on DeFi loans

--- a/article/sections/background.tex
+++ b/article/sections/background.tex
@@ -15,7 +15,7 @@ There are two schools of toughts on money creation. Endogenous money theory posi
 
 In XXXX commercial banks realized that they could pacakge many individual mortages into a well diversified security. They could then earn a lot of money by selling this security, backed by mortages, as a low-risk investement. Not a bad idea, but as time went on, commercial banks and the shadow banking system, continously wanted increased profits on this system, issuing increaslingy risky mortages and manipulating rating agencies to classify the securities to give them the top rating. Then the shadow banking system made the problem much worse by placing massive and risky bets on these securites. The limitations set by regulation and oversight did not succeed in identifiying or stopping this problem neither did the web of incentives and reserve requirements (that the USA had at the time). (source)
 
-When components of the FRB system fail, the government, central banks, or other relevant entites step in to stop the failure before it can cascade into a catastrophich systemtic breakdown. \textcite{berger2020tarp} argues that the cost of bailouts is of a relativly low percentage compared to the potential cost of letting the crisis play out. However, since entites, such as commercial banks, know that there is a high probability they will recieve a bailout in the event of failure, they are incentivized to increase their apetite for risk to take on riskier and riskier investments for greater profit. The so called \textit{too big to fail} commerical banks are even more incentivized to increase their risk, because a failure of these banks would cause a catastropich systematic breakdown alone, and the governemnt or related entites will have no option but to bail them out.
+When components of the FRB system fail, the government, central banks, or other relevant entites step in to stop the failure before it can cascade into a catastrophich systemtic breakdown. \textcite{berger2020tarp} argues that the cost of bailouts is of a relativly low percentage compared to the potential cost of letting the crisis play out. However, since entites, such as commercial banks, know that there is a high probability they will recieve a bailout in the event of failure, they are incentivized to increase their apetit∫∆e for risk to take on riskier and riskier investments for greater profit. The so called \textit{too big to fail} commerical banks are even more incentivized to increase their risk, because a failure of these banks would cause a catastropich systematic breakdown alone, and the governemnt or related entites will have no option but to bail them out.
 
 \subsection{Maturity transformation}
 Maturity transformation is a key element of our current economic system that matches short-term funding to long-term loans. Long-term loans provide people and businesses financing to perform economic development. It would be increadibly risky for people to lock up all of their funds for the duration (maturity) of the long-term loans, they might need it! Maturity transformation is the act of combining short-term funding, for example from checking accounts or saving accoutns, to long-term loans so that people can withdraw and use their money, but still finance these important long-term loans, at the cost of financial stability and the possibility of bank-runs. 
@@ -119,3 +119,25 @@ One of the primary tenets behind cryptocurrencies, tokens, stablecoins and other
 
 \subsection{Central Bank Digital Currency (CBDC)}
 CBDC may be an implementation of 100RB. However, the fed stated that the issuance of CBDC may be limited per person to not draw money out from the banking system... CBDCs may not align with the current FRB system, or if it does, the goal must probably be to replace cash with digial cash, aka only a small percentage of total money (2-3̭\%??). 
+
+\subsection{Digital Asset Loans in Centralized Finance (CeFi)}
+Companies can offer services where they offer loans with digital assets as collateral. Users of trading platforms usually take these loans offered by the exchange to leverage their collateral to make positions much larger than they have in collateral. The exchange automatically detects if the collateral does no longer meet the requirements of the financial position, for example if the financial position goes into a loss, and can force a liquidation (a margin call). If after liquidation you cannot repay the loan due to too much loss on the financial bet, the exchange can then force liquidations of other positions, seizures of other funds the customers has in the system, or use legal means to recoup the loan. Insurance is also an option for the company.
+
+These short-term loans are also attractive for investors as they can use their digital assets to make new financial positions without selling their digital assets into something else, causing a taxable event. 
+
+The relevant platform might borrow the funds for loans from customers deposit, use their own funds, or match the trade with a counterparty so neither has to loan.  
+
+\subsection{Digital Asset Loans in Decentralized Finance (DeFi)}
+The same attractivness of short-term loans for trading applies to DeFi, and therefor the majority of the activity within loans in DeFi, are also short-term loans used for financial trading. (todo source). These kinds of loans are attractive because of their simplicity. A loan can be automatically liquidated based on a single price metric. 
+
+Compared to CeFi, the centralized component may be replaced with increasingly decentralized systems, however as decentralization and the permissionless metric increases, it becomes harder to pursue the repayments of loans trough legal means, should the collateral not cover the loan. The specific DeFi system must design mechanism and architectures where this problem is mitigated.
+
+The AAVE protocol is one expample that at the time of writing has approximatly \$8.232 trillion in liquidity \cite{AaveOpen80:online}. Users can submit their funds into a liquidity pool that can be borrowed from. These funds can then be used as collateral for a new loan. The collateral must always cover the debt (?) and a liquidation protocol exists where anyone can pay back part of the debt for a fee. 
+
+An interesting novelity on the AAVE protocol is the introduction of Uncollateralized Flash Loans that are given and repaid in a single transaction, in exchange for a one-time fee. Since the flash loans happen in a single transaction, and transactions are atomic, the whole transaction either suceeds or fails. So if a loan is not repaid, the transaction will fail, and the loan never happend. This feature has been used to attack other DeFi protocols. (TODO ref)
+
+The loans from DeFi protocols can in theory be used for any purpose. Some may be locked to specifics, such as UFL. You could, in theory, buy a house with those funds. However, you will have to put up an equal or more collateral than the loan. In practice, putting up a relativly "risky" digital assets as collateral, that may fluctuate in price, and buy an illiquid "safe" asset does not makes sense. 
+
+These protocols does not do the amount of due dilligence that traditional lenders perform, for example your creditworthiness is not assesed. These systems does not allow you to put up the thing you are buying with the loan as collateral, nor does they take into account your creditworthiness. For example, few people have the funds to outright buy a whole house. So in a tradtional loan, the house itself will be used as collateral, and the banks will take owernship of your house if your debt defaults, your ability to repay the loan, aka your creditwhortiness, is used to determine wheter or not you can get the loan, and what terms you can get on the loan. Because collateral have to be higher than the amount you borrow, the amount of new loans possible in this system is limited. A business cannot put their assets, such as an aircraft, up as collateral. A business can neither get uncollateralized loans in exchange for higer risk and consequently interest payements. 
+
+To build a DeFi system that can enable similar economic growth to the current Fractional Reserve Banking system, you must allow for more traditional lender practices.
