--- a/article/thesis.bib
+++ b/article/thesis.bib
@@ -124,3 +124,12 @@ month = {2},
 year = {2023},
 note = {(Accessed on 03/20/2023)}
 }
+
+@misc{AaveOpen80:online,
+author = {},
+title = {Aave - Open Source Liquidity Protocol},
+howpublished = {\url{https://aave.com/}},
+month = {},
+year = {},
+note = {(Accessed on 03/22/2023)}
+}
