--- a/article/thesis.tex
+++ b/article/thesis.tex
@@ -7,18 +7,14 @@
 \usepackage{babel,csquotes,xpatch}% recommended
 
 
-\title{Towards equivalent economic growth in a (Self) Sovereign Money System with Collateralized Asset Tokens (CAT) compared to our current Fractional Reserve Banking system [Working Paper]}
+\title{[DRAFT Working Paper] Towards a (Self) Sovereign Money System with equivalent economic growth to Fractional Reserve Banking}
 \author{Kim Aksel Tahuil Borgen}
 \date{\today}
 \addbibresource{thesis.bib}
 \begin{document}
 \maketitle
 \begin{abstract}
-    Inspired by recent events, for example, the collapse of Silicon Valley Bank due to a bank run, I want to analyse the current economic system and research improvements or alternatives based on the digital asset economy and technology with the following initial problem statement:
-
-    A 100\% Reserve Banking system, to which digital assets (may) belong, can address many of the critical issues in our current fractional reserve banking system by separating bank deposits from credit (loans). The main concern is that such a system could hinder credit creation and economic growth, leading to a lack of research. The question to consider is: How can a digital asset-based system facilitate credit creation, economic growth, and monetary stability at a level comparable to our existing fractional reserve banking system? 
-    
-    A specific initial idea can be explored in the file brainstorming.md, but more research must be performed before the problem statement can be transformed into a specific idea. 
+    Our current Fractional Reserve Banking (xRB) system relies heavily on maturity transformation, that is, matching short-term savings to fund long-term debts. An important economic function but one that also causes bank runs and financial instability. Alternatives such as 100\% Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies, address this issue, among many other issues of xRB, but have been criticized for increasing the price and decreasing the availability of loans, stunting economic growth severely. This working paper presents the theory and an implementation prototype of a fully (Self) Sovereign Money System, applicable to both sovereign ownership in individual countries and a decentralized and globally distributed economy. The system has a native currency, a Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are enabled by pooling together savers' SST and creating new SST, that are burned on repayment, if the saver's funds cannot alone meet the demand for new loans. In exchange, the savers, including the system itself, receive proportional ownership of the pool of all loans. The value of this pool in the native currency is autonomously, continuously, and fully transparently calculated based on all the underlying variables in each loan, solving the major issues with its sibling, Collateralised Debt Obligations, that sparked the great recession of 2008. The ownership of the pool of loans can be represented in a fungible token, that savers can either sell or potentially use directly in payments. Thus removing the possibility of a bank-run scenario. Lastly, the interest rate in this system is also autonomously, continuously, and fully transparently calculated to influence the rate of new loans and repayment of existing loans based on a formula designed to target a stable economic growth rate of nominal Gross Domestic Product (GDP) of 3\%.  
 \end{abstract}
 
 \subsection{Acronyms}
