ChadGPTify abstract cause I cant write

--- a/article/sections/abstract.tex
+++ b/article/sections/abstract.tex
@@ -1,1 +1,5 @@
-Our current Fractional Reserve Banking (xRB) system relies heavily on maturity transformation, that is, matching short-term savings to fund long-term debts. An important economic function but one that also causes bank runs and financial instability. Alternatives such as 100\% Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies, address this issue, among many other issues of xRB, but have been criticized for increasing the price and decreasing the availability of loans, stunting economic growth severely. This working paper presents the theory and an implementation prototype of a fully (Self) Sovereign Money System, applicable to both sovereign ownership in individual countries and a decentralized and globally distributed economy. The system has a native currency, a Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are enabled by pooling together savers' SST and creating new SST if the saver's funds cannot alone meet the demand for new loans. In exchange, the savers, including the system itself, receive proportional ownership of the pool of all loans, represented by a Pooled Debt Token (PDT). This token is a pass-through that distributes repayments with interest to the holders. The system will burn all the repayments it receives to mitigate the inflationary effect. The value of the PDT in the native currency SST is autonomously, continuously, and fully transparently calculated based on all the underlying variables in each loan, solving the major issues with its sibling, Collateralised Debt Obligations, that sparked the great recession of 2008. These variables may also include the true market price, so the system can work to stabilize the price, the same function a central bank would have. When savers want to use or withdraw their savings, they sell their PDT, thus removing the possibility of a bank-run scenario. PDT can potentially be sold to the system which creates new SSTs based on the calculated value of PDT, enabling continuous instant liquidity. Lastly, the interest rate in this system is also autonomously, continuously, and fully transparently calculated to influence the rate of new loans and repayment of existing loans based on a formula designed to target a stable economic growth rate of nominal Gross Domestic Product (GDP) of 3\%.  
+%My attempt: Our current Fractional Reserve Banking (xRB) system relies heavily on maturity transformation, that is, matching short-term savings to fund long-term debts. An important economic function but one that also causes bank runs and financial instability. Alternatives such as 100\% Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies, address this issue, among many other issues of xRB, but have been criticized for increasing the price and decreasing the availability of loans, stunting economic growth severely. This working paper presents the theory and an implementation prototype of a fully (Self) Sovereign Money System, applicable to both sovereign ownership in individual countries and a decentralized and globally distributed economy. The system has a native currency, a Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are enabled by pooling together savers' SST and creating new SST if the saver's funds cannot alone meet the demand for new loans. In exchange, the savers, including the system itself, receive proportional ownership of the pool of all loans, represented by a Pooled Debt Token (PDT). This token is a pass-through that distributes repayments with interest to the holders. The system will burn all the repayments it receives to mitigate the inflationary effect. The value of the PDT in the native currency SST is autonomously, continuously, and fully transparently calculated based on all the underlying variables in each loan, solving the major issues with its sibling, Collateralised Debt Obligations, that sparked the great recession of 2008. These variables may also include the true market price, so the system can work to stabilize the price, the same function a central bank would have. When savers want to use or withdraw their savings, they sell their PDT, thus removing the possibility of a bank-run scenario. PDT can potentially be sold to the system which creates new SSTs based on the calculated value of PDT, enabling continuous instant liquidity. Lastly, the interest rate in this system is also autonomously, continuously, and fully transparently calculated to influence the rate of new loans and repayment of existing loans based on a formula designed to target a stable economic growth rate of nominal Gross Domestic Product (GDP) of 3\%.  
+
+% Bow to our chatgpt overlords:
+
+In this working paper, we introduce a novel Self-Sovereign Money System (SSMS) designed to address the financial instability inherent to the existing Fractional Reserve Banking (xRB) system, while also mitigating concerns regarding loan pricing and availability associated with alternative systems such as Full Reserve Banking (FRB), Sovereign Money System (SMS), and cryptocurrencies. The proposed system operates through a native currency, the Self-Sovereign Token (SST), interchangeable with a Central Bank Digital Currency (CBDC). Loans are facilitated by pooling savers' SST and generating new SST when necessary to meet loan demand. Savers, including the system itself, obtain proportional ownership of the loan pool, represented by a Pooled Debt Token (PDT). The PDT acts as a pass-through mechanism, distributing repayments with interest to its holders, while the system burns all its repayments to counteract inflation. The PDT's value in SST is autonomously, continuously, and transparently determined based on underlying loan variables, addressing the critical shortcomings of Collateralized Debt Obligations, the traditional instruments to pool loans that caused the financial crisis of 2008. The system can also stabilize market prices, similar to a central bank's function. Savers can sell their PDT to withdraw savings, eliminating bank-run risks. The system can create new SSTs in exchange for PDTs to ensure continuous instant liquidity. Moreover, interest rates are also autonomously adjusted to promote stable economic growth equal to nominal GDP growth of 3\%. The working paper presents the theory and a prototype implementation of this system, applicable to both sovereign nations and decentralized global economies.
